# claude-code-telegram

./: .env.example  CHANGELOG.md  CONTRIBUTING.md  FEATURE_IMPLEMENTATION_SUMMARY.md  Makefile  README.md  SECURITY.md  pyproject.toml
docs/: configuration.md  development.md  high-level-todo.md  implementation-summary.md  project-overview.md  setup.md  todo-1-core-structure.md  todo-2-configuration.md  todo-3-authentication.md  todo-4-bot-core.md  todo-5-claude-integration.md  todo-6-storage.md  todo-7-features.md  todo-8-testing.md  todo-9-deployment.md
src/: __init__.py  exceptions.py  main.py
src/bot/: __init__.py  core.py
src/bot/features/: conversation_mode.py  file_handler.py  git_integration.py  image_handler.py  quick_actions.py  registry.py  session_export.py
src/bot/handlers/: callback.py  command.py  message.py
src/bot/middleware/: auth.py  rate_limit.py  security.py
src/bot/utils/: formatting.py
src/claude/: __init__.py  facade.py  integration.py  monitor.py  parser.py  sdk_integration.py  session.py
src/config/: environments.py  features.py  loader.py  settings.py
src/security/: __init__.py  audit.py  auth.py  rate_limiter.py  validators.py
src/storage/: database.py  facade.py  models.py  repositories.py  session_storage.py
src/utils/: constants.py
tests/unit/: test_config.py  test_environments.py  test_exceptions.py
tests/unit/test_bot/: test_formatting.py
tests/unit/test_claude/: __init__.py  test_parser.py  test_sdk_integration.py  test_session.py
tests/unit/test_security/: test_audit.py  test_auth.py  test_rate_limiter.py  test_validators.py
tests/unit/test_storage/: test_database.py  test_facade.py  test_repositories.py
